--- a/themes/material/layout/_partial/footer.ejs
+++ b/themes/material/layout/_partial/footer.ejs
@@ -1,17 +1,22 @@
 <!--Footer-->
 <footer class="mdl-mini-footer" id="bottom">
     <% if(theme.scheme === 'Paradox') { %>
-        <!-- Paradox Footer Left Section -->
-        <%- partial('_partial/footer-left') %>
+    <!-- Paradox Footer Left Section -->
+    <%- partial('_partial/footer-left') %>
 
-        <!--Copyright-->
-        <div id="copyright">
-            Copyright&nbsp;©<% if(theme.copyright_since) { %>&nbsp;<%= theme.copyright_since %>&nbsp;-<% } %><script type="text/javascript">var fd = new Date();document.write("&nbsp;" + fd.getFullYear() + "&nbsp;");</script><%- config.title %>
-        </div>
+    <!--Copyright-->
+    <div id="copyright">
+        Copyright&nbsp;©<% if(theme.copyright_since) { %>&nbsp;<%= theme.copyright_since %>&nbsp;-<% } %>
+        <script
+            type="text/javascript">var fd = new Date(); document.write("&nbsp;" + fd.getFullYear() + "&nbsp;");</script>
+        <%- config.title %>
+        <br />
+        <a class="footer-develop-a" href="http://beian.miit.gov.cn/">鲁ICP备2020039697号</a>
+    </div>
 
-        <!-- Paradox Footer Right Section -->
+    <!-- Paradox Footer Right Section -->
 
-        <!--
+    <!--
         I am glad you use this theme, the development is no so easy, I hope you can keep the copyright.
         It will not impact the appearance and can give developers a lot of support :)
 
@@ -19,11 +24,14 @@
         它不会影响美观并可以给开发者很大的支持。 :)
         -->
 
-        <div class="mdl-mini-footer--right-section">
-            <div>
-                <div class="footer-develop-div">Powered by <a href="https://hexo.io" target="_blank" class="footer-develop-a">Hexo</a></div>
-                <div class="footer-develop-div">Theme - <a href="https://github.com/viosey/hexo-theme-material" target="_blank" class="footer-develop-a">Material</a></div>
-            </div>
+    <div class="mdl-mini-footer--right-section">
+        <div>
+            <div class="footer-develop-div">Powered by <a href="https://hexo.io" target="_blank"
+                    class="footer-develop-a">Hexo</a></div>
+            <div class="footer-develop-div">Theme - <a href="https://github.com/viosey/hexo-theme-material"
+                    target="_blank" class="footer-develop-a">Material</a></div>
+            <div class="footer-develop-div">个人微信公众号 - <span style="color:#6b6b6b">隐匿于电流中的秘密</span></div>
         </div>
+    </div>
     <% } %>
 </footer>
